@@ -1747,6 +1747,7 @@ gtk_font_selection_load_font (GtkFontSelection *fontsel)
 {
   GdkFont *font;
   gchar *fontname, *label_text;
+  XFontStruct *xfs;
   
   if (fontsel->font)
     gdk_font_unref (fontsel->font);
@@ -1763,6 +1764,16 @@ gtk_font_selection_load_font (GtkFontSelection *fontsel)
       g_message("Loading: %s\n", fontname);
 #endif
       font = gdk_font_load (fontname);
+      xfs = GDK_FONT_XFONT(font);
+      if (xfs->min_byte1 != 0 || xfs->max_byte1 != 0)
+	{
+	  gchar *tmp_name;
+	  
+	  gdk_font_unref(font);
+	  tmp_name = g_strconcat (fontname, ",*", NULL);
+	  font = gdk_fontset_load (tmp_name);
+	  g_free(tmp_name);
+	}
       g_free(fontname);
       
       if (font)
@@ -1903,30 +1914,42 @@ gtk_font_selection_show_font_info (GtkFontSelection *fontsel)
   
   if (fontsel->font)
     {
-      font_atom = XInternAtom(GDK_DISPLAY(), "FONT", True);
-      if (font_atom != None)
+      font_atom = gdk_atom_intern ("FONT", FALSE);
+
+      if (fontsel->font->type == GDK_FONT_FONTSET)
+	{
+	  XFontStruct **font_structs;
+	  gint num_fonts;
+	  gchar **font_names;
+	  
+	  num_fonts = XFontsOfFontSet (GDK_FONT_XFONT(fontsel->font),
+				       &font_structs, &font_names);
+	  status = XGetFontProperty(font_structs[0], font_atom, &atom);
+	}
+      else
 	{
 	  status = XGetFontProperty(GDK_FONT_XFONT(fontsel->font), font_atom,
 				    &atom);
-	  if (status == True)
+	}
+
+      if (status == True)
+	{
+	  name = gdk_atom_name (atom);
+	  gtk_entry_set_text(GTK_ENTRY(fontsel->actual_font_name), name);
+	  
+	  for (i = 0; i < GTK_XLFD_NUM_FIELDS; i++)
 	    {
-	      name = XGetAtomName(GDK_DISPLAY(), atom);
-	      gtk_entry_set_text(GTK_ENTRY(fontsel->actual_font_name), name);
-	      
-	      for (i = 0; i < GTK_XLFD_NUM_FIELDS; i++)
-		{
-		  field = gtk_font_selection_get_xlfd_field (name, i,
-							     field_buffer);
-		  if (i == XLFD_SLANT)
-		    field = gtk_font_selection_expand_slant_code(field);
-		  else if (i == XLFD_SPACING)
-		    field = gtk_font_selection_expand_spacing_code(field);
-		  gtk_clist_set_text(GTK_CLIST(fontsel->info_clist), i, 2,
-				     field ? field : "");
-		}
-	      shown_actual_fields = TRUE;
-	      XFree(name);
+	      field = gtk_font_selection_get_xlfd_field (name, i,
+							 field_buffer);
+	      if (i == XLFD_SLANT)
+		field = gtk_font_selection_expand_slant_code(field);
+	      else if (i == XLFD_SPACING)
+		field = gtk_font_selection_expand_spacing_code(field);
+	      gtk_clist_set_text(GTK_CLIST(fontsel->info_clist), i, 2,
+				 field ? field : "");
 	    }
+	  shown_actual_fields = TRUE;
+	  g_free (name);
 	}
     }
   if (!shown_actual_fields)
